# trello-cli

./: LICENSE.txt  README.md  pyproject.toml
src/trello_cli/: main.py  trello_api.py
tests/: __init__.py
