[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trello-cli"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "dxvsh", email = "vashishtdakksh@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/dxvsh/trello-cli#readme"
Issues = "https://github.com/dxvsh/trello-cli/issues"
Source = "https://github.com/dxvsh/trello-cli"

[tool.hatch.version]
path = "src/trello_cli/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/trello_cli tests}"

[tool.coverage.run]
source_pkgs = ["trello_cli", "tests"]
branch = true
parallel = true
omit = [
  "src/trello_cli/__about__.py",
]

[tool.coverage.paths]
trello_cli = ["src/trello_cli", "*/trello-cli/src/trello_cli"]
tests = ["tests", "*/trello-cli/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
