[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trello-cli"
version = "0.1.0"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "dxvsh", email = "100519702+dxvsh@users.noreply.github.com" },
]
dependencies = [
    "typer>=0.15.0",
    "requests>=2.31.0",
    "rich>=10.0.0",
]

[project.scripts]
trello-cli = "trello_cli.main:app"

[tool.coverage.run]
source_pkgs = ["trello_cli", "tests"]
branch = true
parallel = true
omit = [
  "src/trello_cli/__about__.py",
]

[tool.coverage.paths]
trello_cli = ["src/trello_cli", "*/trello-cli/src/trello_cli"]
tests = ["tests", "*/trello-cli/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
